--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ header img {
     height: 50px;
 }
 
+header label {
+    margin: 0 20px;
+    color: white;
+}
+
 main {
     overflow-y: scroll;
     max-height: calc(100vh - 50px);
